# onyx-database-parent

./: .gitignore  .gitignore.orig  .pullapprove.yml  LICENSE  README.md  log.txt  pom.xml  pom.xml.versionsBackup  release.properties  settings.gradle.kts
buildSrc/: build.gradle.kts
onyx-ai/: build.gradle.kts
onyx-ai-agent/: build.gradle.kts
onyx-ai/src/main/native/metal/: CMakeLists.txt  OnyxMetal.mm  build.sh  kernels.metal
onyx-android/: pom.xml
onyx-android-remote-driver/: pom.xml
onyx-cloud-client/: README.md  build.gradle.kts
onyx-database/: build.gradle.kts  pom.xml
onyx-database-examples/: README.md  pom.xml  pom.xml.orig  settings.gradle.kts
onyx-database-examples/cache-manager/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/embedded-persistence-manager/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/encryption/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/indexes/: build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/lifecycle-events/: build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/model-update/: pom.xml
onyx-database-examples/model-updates/: pom.xml  settings.gradle.kts
onyx-database-examples/onyx-android-example/: build.gradle  gradle.properties
onyx-database-examples/partition/: build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/performance-benchmarks/: build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/persisting-data/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/query-change-listener/: build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/querying/: build.gradle.kts  nbactions.xml  pom.xml  settings.gradle.kts
onyx-database-examples/quickstart/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
onyx-database-examples/relationships/: build.gradle.kts  pom.xml  (+1 more)
onyx-database-tests/: build.gradle.kts  pom.xml  pom.xml.versionsBackup
onyx-faiss-index/: build.gradle.kts
onyx-library/: pom.xml
onyx-lucene-index/: build.gradle.kts
onyx-remote-database/: GNU-AGPL-3.0.txt  build.gradle.kts  pom.xml
onyx-remote-driver/: build.gradle.kts  pom.xml
onyx-web-database/: build.gradle.kts  pom.xml
release-notes/: 1.1.0-release-notes.md
sample-test-project/: Agent.md  build.gradle.kts
(+2599 files in other folders)
